package western.grammaire;

public interface Genre {
    public static String getArticleDefini(){
        return "";
    }
    abstract String getArticleIndefini() {
        return "";
    }

    String getArticleParitif() {
        return "";
    }
            + getPreposition() : String
}
