package western.grammaire;

public class Masculin {
     Masculin()
     {}
            + getArticleDefini() : String
            + getArticleIndefini() : String
            + getArticleParitif() : String
            + getPreposition() : String
}
