@startuml
'https://plantuml.com/class-diagram
scale 1

package western {
    package personnage {
        class Personnage
        {
            - m_nom : String
            + <<Create>> Personnage (nom:String)
            + <<Create>> Personnage (nom:String, boisson: Substantif)
            + sePresenter() : String
            + boire() : String
            + boire(boisson:Substantif) : String
            + dire(discours:String) : String
        }
    }

    class Narrateur
    {
        - m_histoire : String
        + <<Create>> Narrateur ()
        + ajouterLignes(discours:String)
        + raconterHistoire(): String
    }

    package grammaire {
        class Substantif
        {
            - m_mot : String
            + <<Create>> Substantif(boisson:String, genre:Genre)
            + articleDefini() : String
            + articleIndefini() : String
            + articleParitif() : String
            + preposition() : String
        }

        interface Genre <<interface>>
        {
            + {abstract} getArticleDefini() : String
            + {abstract} getArticleIndefini() : String
            + {abstract} getArticleParitif() : String
            + {abstract} getPreposition() : String
        }

        class Masculin implements Genre
        {
            + <<Create>> Masculin()
            + getArticleDefini() : String
            + getArticleIndefini() : String
            + getArticleParitif() : String
            + getPreposition() : String
        }

        class Feminin implements Genre
        {
            + <<Create>> Masculin()
            + getArticleDefini() : String
            + getArticleIndefini() : String
            + getArticleParitif() : String
            + getPreposition() : String
        }
    }
}

class Histoire1 {
    + {static} main (args: String[])
}

Personnage *-> "1\n-boissonFavorite" Substantif : > a pour boisson favorite
Substantif o--> "1\n-genre" Genre : > a pour genre
Histoire1 ..> Personnage : <<uses>>
Histoire1 ..> Substantif : <<uses>>
Histoire1 ..> Narrateur : <<uses>>
Histoire1 ..> Masculin : <<uses>>
Histoire1 ..> Feminin : <<uses>>



@enduml